--- a/Animation/index.html
+++ b/Animation/index.html
@@ -4,16 +4,18 @@
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
 	<title>My Portfolio</title>
-	<link href="myCSS.css" rel="stylesheet" type="text/css">
+	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  <img src="Imagery/HomePageBanner.jpg" width="960" height="180" alt=""/>  </div>
+  <img src="../Imagery/HomePageBanner.jpg" width="960" height="180" alt=""/>  </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | Photoshop | Illustrator | Audio | Animation | Video</h3>
+    <h3><a href="../index.html">Home</a> | Photoshop | Illustrator | Audio | Animation | Video</h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+    <p> Animation </p>
+  </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2013</h4>
   </div>
