--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="header">
   <img src="Imagery/HomePageBanner.jpg" width="960" height="180" alt=""/>  </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | Photoshop | Illustrator | Audio | Animation | Video</h3>
+    <h3><a href="index.html">Home</a> | <a href="Photoshop/index.html">Photoshop</a> | <a href="Illustrator/index.html">Illustrator</a> | <a href="Audio/index.html">Audio</a> | <a href="Animation/index.html">Animation</a> | <a href="Video/index.html">Video</a></h3>
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
