--- a/Video/index.html
+++ b/Video/index.html
@@ -9,12 +9,12 @@
 <body>
 <div class="container">
   <div class="header">
-  <img src="AnimationBanner.jpg" width="960" height="180" alt=""/>  </div>
+  <img src="VideoBanner.jpg" width="960" height="180" alt=""/>  </div>
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../Photoshop/index.html">Photoshop</a> | <a href="../Illustrator/index.html">Illustrator</a> | <a href="../Audio/index.html">Audio</a> | <a href="../Animation/index.html">Animation</a> | <a href="../Video/index.html">Video</a></h3>
   </div>
   <div class="content">
-    <p> Animation </p>
+    <p>Video </p>
   </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2013</h4>
