--- a/Photoshop/index.html
+++ b/Photoshop/index.html
@@ -14,7 +14,7 @@
     <h3><a href="../index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../Illustrator/index.html">Illustrator</a> | <a href="../Audio/index.html">Audio</a> | <a href="../Animation/index.html">Animation</a> | <a href="../Video/index.html">Video</a></h3>
   </div>
   <div class="content">
-    <p>Photoshop </p>
+    <p>Photoshop<img src="CancerMoleculeStructure.png" width="900" height="600" alt=""/></p>
   </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2013</h4>
