--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2013</h4>
+    <h4>About Me | <a href="mailto:costadanny98@gmail.com">Contact</a> | Copyright 2013</h4>
   </div>
 </div>
 </body>
