--- a/Illustrator/index.html
+++ b/Illustrator/index.html
@@ -14,10 +14,7 @@
     <h3><a href="../index.html">Home</a> | <a href="../Photoshop/index.html">Photoshop</a> | <a href="../Illustrator/index.html">Illustrator</a> | <a href="../Audio/index.html">Audio</a> | <a href="../Animationindex.html">Animation</a> | <a href="../Video/index.html">Video</a></h3>
   </div>
   <div class="content">
-    <p>Illustrator </p>
-  </div>
-  <div class="footer">
-    <h4>About Me | Contact | Copyright 2013</h4>
+    <p>Illustrator<img src="Design-IT.jpg" width="960" height="1380" alt=""/><img src="Thank-You-Card.jpg" width="612" height="396" alt=""/></p>
   </div>
 </div>
 </body>
