--- a/Animation/index.html
+++ b/Animation/index.html
@@ -5,20 +5,49 @@
 	<meta charset="UTF-8">
 	<title>My Portfolio</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
+<script src="../Scripts/swfobject_modified.js"></script>
 </head>
 <body>
 <div class="container">
   <div class="header">
   <img src="AnimationBanner.jpg" width="960" height="180" alt=""/>  </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="../Photoshop/index.html">Photoshop</a> | <a href="../Illustrator/index.html">Illustrator</a> | <a href="../Audio/index.html">Audio</a> | <a href="../Animation/index.html">Animation</a> | <a href="../Video/index.html">Video</a></h3>
+    <h3><a href="../index.html">Home</a> | <a href="../Photoshop/index.html">Photoshop</a> | <a href="../Illustrator/index.html">Illustrator</a> | <a href="../Audio/index.html">Audio</a> | <a href="index.html">Animation</a> | <a href="../Video/index.html">Video</a></h3>
   </div>
   <div class="content">
-    <p> Animation </p>
+    <p> Animation
+      <object id="FlashID" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="550" height="400">
+        <param name="movie" value="Geoflexanimation.swf">
+        <param name="quality" value="high">
+        <param name="wmode" value="opaque">
+        <param name="swfversion" value="6.0.65.0">
+        <!-- This param tag prompts users with Flash Player 6.0 r65 and higher to download the latest version of Flash Player. Delete it if you don’t want users to see the prompt. -->
+        <param name="expressinstall" value="../Scripts/expressInstall.swf">
+        <!-- Next object tag is for non-IE browsers. So hide it from IE using IECC. -->
+        <!--[if !IE]>-->
+        <object type="application/x-shockwave-flash" data="Geoflexanimation.swf" width="550" height="400">
+          <!--<![endif]-->
+          <param name="quality" value="high">
+          <param name="wmode" value="opaque">
+          <param name="swfversion" value="6.0.65.0">
+          <param name="expressinstall" value="../Scripts/expressInstall.swf">
+          <!-- The browser displays the following alternative content for users with Flash Player 6.0 and older. -->
+          <div>
+            <h4>Content on this page requires a newer version of Adobe Flash Player.</h4>
+            <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" width="112" height="33" /></a></p>
+          </div>
+          <!--[if !IE]>-->
+        </object>
+        <!--<![endif]-->
+      </object>
+    </p>
   </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2013</h4>
   </div>
 </div>
+<script type="text/javascript">
+swfobject.registerObject("FlashID");
+</script>
 </body>
 </html>
