--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
 <div class="container">
   <div class="header">
-  <img src="IllustratorBanner.jpg" width="960" height="180" alt=""/>  </div>
+  <img src="Imagery/HomePageBanner.jpg" width="960" height="180" alt=""/>  </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="../Photoshop/index.html">Photoshop</a> | <a href="../Illustrator/index.html">Illustrator</a> | <a href="../Audio/index.html">Audio</a> | <a href="../Animationindex.html">Animation</a> | <a href="../Video/index.html">Video</a></h3>
+    <h3><a href="index.html">Home</a> | <a href="Photoshop/index.html">Photoshop</a> | <a href="Illustrator/index.html">Illustrator</a> | <a href="Audio/index.html">Audio</a> | <a href="Animation/index.html">Animation</a> | <a href="Video/index.html">Video</a></h3>
   </div>
-  <div class="content">
-    <p>Illustrator<img src="Design-IT.jpg" width="960" height="1380" alt=""/><img src="Thank-You-Card.jpg" width="612" height="396" alt=""/></p>
+  <div class="content">Hello World!</div>
+  <div class="footer">
+    <h4>About Me | <a href="mailto:costadanny98@gmail.com">Contact</a> | Copyright 2013</h4>
   </div>
 </div>
 </body>
